--- a/index.html
+++ b/index.html
@@ -41,12 +41,8 @@
             <li class="nav-item"><a href="summary.html" class="nav-link">Özet</a></li>
             <li class="nav-item"><a href="aims_objectives.html" class="nav-link">Amaç ve Hedefler</a></li>
             <li class="nav-item"><a href="about.html" class="nav-link">Konu,Kapsam ve <br>Literatür Özeti</a></li>
-<<<<<<< HEAD
-            <li class="nav-item"><a href="members.html" class="nav-link">Kişiler</a></li>
-=======
             <li class="nav-item"><a href="persons.html" class="nav-link">Kişiler</a></li>
             <li class="nav-item"><a href="article-publication.html" class="nav-link">Yayınlar</a></li>
->>>>>>> b40671198e6ce5ee23bcd88ef430bb5d9849ca6c
           </ul>
         </div>
       </div>
@@ -72,7 +68,7 @@
       <div class="container-fluid" data-scrollax-parent="true">
         <div class="row no-gutters d-flex align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
 
-          <div class="col-md-3 mb-3">
+          <!-- <div class="col-md-3 mb-3">
             <a href="#" class="featured-img">
               <div class="text-1 p-4 d-flex align-items-center">
                 <h3>WBAN sırasında yer alan bazı fizyolojik algılayıcılar<br></h3>
@@ -81,36 +77,36 @@
               <div class="text p-4 d-flex align-items-center">
               </div>
             </a>
-          </div>
+          </div> -->
           
           <div class="col-md-6">
             <div class="row no-gutters">
               <div class="col-md-12">
                 <div class="row no-gutters d-flex align-items-end">
 
-                  <div class="col-md-8">
+                  <div class="col-md-10">
                     <a href="#" class="featured-img">
                       <div class="text-1 p-4 d-flex align-items-center">
                         <h3>AVATAR projesi ağ mimarisi<br></h3>
                       </div>
-                      <img src="images/photo0.jpg" class="img-fluid" alt="">
+                      <img src="images/avatar.jpg" class="img-fluid" alt="">
                       <div class="text p-4 d-flex align-items-center">
                       </div>
                     </a>
                   </div>
 
-                  <div class="col-md-4">
+                  <!-- <div class="col-md-4">
                     <a href="#" class="featured-img">
                       <img src="images/photo5.jpg" class="img-fluid" alt="">
                       <div class="text p-4 d-flex align-items-center">
                       </div>
                     </a>
-                  </div>
+                  </div> -->
                   
                 </div>
               </div>
 
-              <div class="col-md-12">
+              <!-- <div class="col-md-12">
                 <div class="row no-gutters d-flex align-items-start">
                   <div class="col-md-8">
                     <a href="#" class="featured-img">
@@ -127,11 +123,11 @@
                     </a>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
 
-          <div class="col-md-3">
+          <!-- <div class="col-md-3">
             <a href="#" class="featured-img">
               <div class="text-1 p-4 d-flex align-items-center">
                 <h3>AVATAR projesi protokol katmanları<br></h3>
@@ -140,7 +136,7 @@
               <div class="text p-4 d-flex align-items-center">
               </div>
             </a>
-          </div>
+          </div> -->
       </div>
     </section>
     </div>
@@ -162,8 +158,8 @@
                 <li><a href="summary.html" class="py-2 d-block">Özet</a></li>
                 <li><a href="aims_objectives.html" class="py-2 d-block">Amaç ve Hedefler</a></li>
                 <li><a href="about.html" class="py-2 d-block">Konu,Kapsam ve <br>Literatür Özeti</a></li>
-                <li class="nav-item"><a href="members.html" class="nav-link">Kişiler</a></li>
-
+                <li><a href="persons.html" class="py-2 d-block">Kişiler</a></li>
+                <li><a href="article-publication.html" class="py-2 d-block">Yayınlar</a></li>
               </ul>
             </div>
           </div>
@@ -171,11 +167,7 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">İletişim</h2>
               <ul class="list-unstyled">
-<<<<<<< HEAD
                 <li><a target="_blank" href="https://web.atu.edu.tr/akdemir" class="py-2 d-block">Web Sitesi</a></li>
-=======
-                <li><a href="https://web.atu.edu.tr/akdemir" class="py-2 d-block">https://web.atu.edu.tr/akdemir</a></li>
->>>>>>> b40671198e6ce5ee23bcd88ef430bb5d9849ca6c
               </ul>
             </div>
           </div>
