--- a/aims_objectives.html
+++ b/aims_objectives.html
@@ -41,12 +41,8 @@
             <li class="nav-item"><a href="summary.html" class="nav-link">Özet</a></li>
             <li class="nav-item active"><a href="aims_objectives.html" class="nav-link">Amaç ve Hedefler</a></li>
             <li class="nav-item"><a href="about.html" class="nav-link">Konu,Kapsam ve <br>Literatür Özeti</a></li>
-<<<<<<< HEAD
-            <li class="nav-item"><a href="team.html" class="nav-link">Kişiler</a></li>
-=======
             <li class="nav-item"><a href="persons.html" class="nav-link">Kişiler</a></li>         
             <li class="nav-item"><a href="article-publication.html" class="nav-link">Yayınlar</a></li>
->>>>>>> b40671198e6ce5ee23bcd88ef430bb5d9849ca6c
           </ul>
         </div>
       </div>
@@ -140,6 +136,8 @@
                 <li><a href="summary.html" class="py-2 d-block">Özet</a></li>
                 <li><a href="aims_objectives.html" class="py-2 d-block">Amaç ve Hedefler</a></li>
                 <li><a href="about.html" class="py-2 d-block">Konu,Kapsam ve <br>Literatür Özeti</a></li>
+                <li><a href="persons.html" class="py-2 d-block">Kişiler</a></li>
+                <li><a href="article-publication.html" class="py-2 d-block">Yayınlar</a></li>
               </ul>
             </div>
           </div>
@@ -147,11 +145,7 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">İletişim</h2>
               <ul class="list-unstyled">
-<<<<<<< HEAD
                 <li><a target="_blank" href="https://web.atu.edu.tr/akdemir" class="py-2 d-block">Web Sitesi</a></li>
-=======
-                <li><a href="https://web.atu.edu.tr/akdemir" class="py-2 d-block">https://web.atu.edu.tr/akdemir</a></li>
->>>>>>> b40671198e6ce5ee23bcd88ef430bb5d9849ca6c
               </ul>
             </div>
           </div>
