--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     </div>
     
     <div class="bg-light">
+      <img src="images/avatar.jpg" width="100%" class="img-fluid" alt="">
+
     <section class="ftco-section-featured ftco-animate">
       <div class="container-fluid" data-scrollax-parent="true">
         <div class="row no-gutters d-flex align-items-center" data-scrollax=" properties: { translateY: '-30%'}">
@@ -84,7 +86,7 @@
               <div class="col-md-12">
                 <div class="row no-gutters d-flex align-items-end">
 
-                  <div class="col-md-10">
+                  <!-- <div class="col-md-10">
                     <a href="#" class="featured-img">
                       <div class="text-1 p-4 d-flex align-items-center">
                         <h3>AVATAR projesi ağ mimarisi<br></h3>
@@ -93,7 +95,7 @@
                       <div class="text p-4 d-flex align-items-center">
                       </div>
                     </a>
-                  </div>
+                  </div> -->
 
                   <!-- <div class="col-md-4">
                     <a href="#" class="featured-img">
